<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:inputType="text"
            android:background="@drawable/edittext_register"
            android:padding="10dp"
            android:hint="@string/ad"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surname"
            android:inputType="text"
            android:layout_below="@id/name"
            android:background="@drawable/edittext_register"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            android:hint="@string/soyad"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_below="@id/surname"
            android:background="@drawable/edittext_register"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            android:hint="@string/e_posta"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_below="@id/email"
            android:background="@drawable/edittext_register"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            android:hint="@string/ifre"
            />
    </RelativeLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp">

         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/type">

             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/dr"
                 android:padding="15dp"
                 android:text="@string/doktor"
                 android:textStyle="bold"
                  />

             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/nr"
                 android:layout_marginLeft="40dp"
                 android:padding="15dp"
                 android:text="@string/hem_ire"
                 android:textStyle="bold"/>


         </RadioGroup>
     </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgstr"
            android:background="@drawable/button_register"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:text="@string/kaydol"
            android:textColor="@color/AZURE"
            android:textStyle="bold"

            />
    </RelativeLayout>




</LinearLayout>